Prevent occasional misaligned tree view columns

--- a/src/ggrc/assets/stylesheets/components/tree/_tree-view.scss
+++ b/src/ggrc/assets/stylesheets/components/tree/_tree-view.scss
@@ -227,7 +227,6 @@ tree-item {
 
   .reference-urls-list {
     overflow: hidden;
-    white-space: nowrap;
     width: 100%;
     text-overflow: ellipsis;
 
